# Geo3D

./: 01_geo3D_types.in.sql  02_geo3D_topo_ops.in.sql  03_geo3D_relpos_ops.in.sql  04_geo3D_am.in.sql  CMakeLists.txt  LICENSE  README  README.md  geo3D_decls.h  geo3D_gist_rtree.c  geo3D_relpos_ops.c  geo3D_selfuncs.c  geo3D_spgist_octree.c  geo3D_topo_ops.c  geo3D_types.c  geo3d.control
doc/: geo3d.tex
